--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "mongoose": "^8.9.1",
     "nodemon": "^3.1.7",
     "path": "^0.12.7",
     "serve-static": "^1.16.2"
