--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "mongoose": "^8.9.1",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7",
     "path": "^0.12.7",
     "serve-static": "^1.16.2"
