send email, update password

--- a/src/backend/.env
+++ b/src/backend/.env
@@ -1,2 +1,6 @@
 MONGO_URI=mongodb+srv://IntroSE22CLC02GR08:0822CLC02SE@introse22clc02gr08.y1sfi.mongodb.net/?retryWrites=true&w=majority&appName=IntroSE22CLC02GR08
 PORT=3000
+EMAIL_USER=ttctuong22@clc.fitus.edu.vn
+EMAIL_PASS=sgpm vzuf xxip bvnp
+JWT_SECRET=a34b12c4f9b3a34c9d3e79b42a03e14f1c76f6f2190f9c70a34b1c3f9c
+BASE_URL=http://localhost:3000
